# tmux-mcp

./: LICENSE  README.md  pyproject.toml
src/tmux_mcp/: __init__.py  server.py
tests/: test_await_reply.py  test_delta_and_status.py  test_integration_tmux.py  test_keep_awake.py  test_keys.py
