[project]
name = "tmux-mcp"
version = "0.1.0"
description = "MCP server exposing tmux primitives for session, window, and pane management"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Andreas Daiminger" },
]
requires-python = ">=3.13"
keywords = ["mcp", "tmux", "terminal", "session-management"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Shells",
    "Topic :: Utilities",
]
dependencies = [
    "fastmcp>=2.0.0,<3.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/chaosisnotrandomitisrhythmic/tmux-mcp"
Repository = "https://github.com/chaosisnotrandomitisrhythmic/tmux-mcp"
Issues = "https://github.com/chaosisnotrandomitisrhythmic/tmux-mcp/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
# E501 (line length) is left to judgement; several pre-existing tool docstrings
# run long and reflowing them is out of scope for behavioural changes.
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
tmux-mcp = "tmux_mcp:run_server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
